RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/AI_Webhook_Response__e.object-meta.xml
<CustomObject>
    <description>Platform Event for processing AI provider webhook responses asynchronously</description>
    <label>AI Webhook Response</label>
    <pluralLabel>AI Webhook Responses</pluralLabel>
</CustomObject>