RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Callback_Id__c.field-meta.xml
<CustomField>
    <fullName>Callback_Id__c</fullName>
    <description>Unique identifier for the webhook callback</description>
    <label>Callback ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>