RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Related Salesforce Case ID</description>
    <label>Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>