RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Correlation ID for tracking related requests</description>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>