RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of webhook event</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>