RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>AI provider name (Ada, Intercom, etc.)</description>
    <label>Provider Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>