RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Response_Data__c.field-meta.xml
<CustomField>
    <fullName>Response_Data__c</fullName>
    <description>JSON serialized response data from the AI provider</description>
    <label>Response Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>