RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the webhook response</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>