RouteLogic-v4.0.0/force-app/main/default/objects/AI_Webhook_Response__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Time when the webhook was received</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>